# atomic-neural-transistors

./: ANT_FORMAT.md  CROSS_ANT_ROUTING.md  Cargo.toml  LICENSE-MIT  MASTERY.md  PLAN_REPRODUCE_BENCHMARKS.md  PLAN_SIGNAL_MIGRATION.md  PLAN_THERMAL_WEIGHTS.md  README.md  REAL_WORLD_USES.md
benches/: ant_bench.rs
data/: colonist_threat.ant
examples/: adaptive_cascade.rs  basic_usage.rs  classifier_mastery.rs  compare_mastery.rs  composition.rs  composition_contains.rs  composition_has_duplicate.rs  composition_sudoku.rs  debug_mastery.rs  diff_mastery.rs  gate_mastery.rs  merge_mastery.rs  multiplex_classify.rs  persistence_lifecycle.rs  pipeline_planning.rs  sensor_anomaly.rs  sudoku_check.rs  thermal_classifier.rs
models/: are_equal.safetensors  contains.safetensors  has_duplicate.safetensors  is_empty.safetensors
runes/: cascade_features.rune  classifier.rune  classifier_train.rune  compare.rune  compare_train.rune  debug_mastery.rune  diff.rune  diff_train.rune  gate.rune  gate_train.rune  merge.rune  merge_train.rune  multiplex_features.rune  persistence_lifecycle.rune  sensor_anomaly.rune  thermal_classifier.rune
runners/: adaptive_cascade.rs  classifier_mastery.rs  compare_mastery.rs  composition_contains.rs  composition_has_duplicate.rs  composition_sudoku.rs  debug_mastery.rs  diff_mastery.rs  gate_mastery.rs  merge_mastery.rs  multiplex_classify.rs  persistence_lifecycle.rs  pipeline_planning.rs  sensor_anomaly.rs  thermal_classifier.rs
src/: encoding.rs  error.rs  learning.rs  lib.rs  memory.rs  multiplex.rs  neuromod.rs  prediction.rs  salience.rs  testdata.rs  thermal_mastery.rs  weights_init.rs
src/ants/: classifier.rs  compare.rs  diff.rs  gate.rs  merge.rs  mod.rs
src/composition/: grid.rs  mod.rs  sequence.rs  traits.rs
src/config/: atomic.rs  mod.rs
src/core/: atomic_neural_transistor.rs  atomic_trm.rs  mod.rs  thermal.rs  weight_matrix.rs
src/modules/: ant_ml.rs  mod.rs
src/pretrained/: loader.rs  mod.rs  models.rs
ternsig/: classifier.ternsig  diff.ternsig  gate.ternsig
tests/: equivalence.rs  thermogram_persistence.rs
tisa/: compare.tisa.asm  merge.tisa.asm
trained/: classifier.thermo  compare.thermo  compare_composed.thermo  diff.thermo  gate.thermo  lifecycle.thermo  merge.thermo  thermal_classifier.ant
