[package]
name = "atomic-neural-transistors"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ultra-small (<5K param) composable ternary neural primitives for CPU-only AI"
repository = "https://github.com/blackfall-labs/atomic-neural-transistors"
keywords = ["ternary", "neural-network", "tiny-ml", "edge-ai", "cpu"]
categories = ["science", "algorithms"]

[dependencies]
# Signal foundation - Signal VM, thermograms, adaptive learning
ternsig = { path = "../ternsig" }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# NO CUDA. CPU only. Ternary weights. Integer arithmetic.
