[package]
name = "atomic-neural-transistors"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ultra-small (<5K param) composable ternary neural primitives for CPU-only AI"
repository = "https://github.com/blackfall-labs/atomic-neural-transistors"
keywords = ["ternary", "neural-network", "tiny-ml", "edge-ai", "cpu"]
categories = ["science", "algorithms"]

[dependencies]
# Signal foundation — ternary signal types (PackedSignal, Signal, Polarity)
ternary-signal = { path = "../ternary-signal" }

# Runes scripting engine — replaces ternsig v1 assembly VM
runes-core = { path = "../runes/runes-core" }
runes-parser = { path = "../runes/runes-parser" }
runes-eval = { path = "../runes/runes-eval" }

# Persistence — thermal progression for synaptic strength history
thermogram = { path = "../thermogram-rs" }

# Distributed representational memory — signal-vector banks
databank-rs = { path = "../databank-rs" }

# Checksums
crc32fast = "1.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ant_bench"
harness = false

[features]
default = []
# NO CUDA. CPU only. Ternary weights. Integer arithmetic.
